# elastic_formation_for_swarm_robotics

./: README.md
central_control/: CMakeLists.txt  package.xml
central_control/launch/: copy_test.launch  run_central_and2REALrobots.launch  run_central_and2robots.launch  run_central_and3robots.launch  run_central_and4robots.launch  run_central_costmap.launch  test_move_base_two.launch
central_control/param/: base_global_planner.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  global_costmap_params_robot1.yaml  local_costmap_params.yaml  local_costmap_params_robot1.yaml  move_base_params.yaml  teb_local_planner_params_burger.yaml  teb_local_planner_params_burger_robot1.yaml
central_control/src/: central_control.cpp
global_planners_test/: CMakeLists.txt  package.xml
global_planners_test/include/global_planners_test/: global_planner.h
global_planners_test/launch/: test.launch  test_params.yaml  test_params_pure_method.yaml
global_planners_test/src/: global_planner.cpp  global_planners_test_node.cpp
metrics/: CMakeLists.txt  package.xml
metrics/launch/: metrics.launch
metrics/src/: metrics.cpp
move_robot/: CMakeLists.txt  package.xml
move_robot/launch/: start_moving.launch
move_robot/maps/: map_home_parcial.yaml
move_robot/src/: move_robot.cpp
multiple_turtlebots_nav/: CMakeLists.txt  package.xml
multiple_turtlebots_nav/launch/: generated_robots.launch  generated_robots_ampulheta1robot.launch  generated_robots_ampulheta1robot_no_namespace.launch  generated_robots_ampulheta2robots.launch  generated_robots_ampulheta3robots.launch  generated_robots_ampulheta4robots.launch  generated_robots_auditorio1robot.launch  generated_robots_auditorio2robots.launch  generated_robots_columns2robots.launch  generated_robots_columns3robots.launch  generated_robots_columns4robots.launch  generated_robots_lab2331robot_no_namespace.launch  one_robot.launch  (+19 more)
(+52 files in other folders)
